# pi-services

./: .gitignore  README.md  pyproject.toml
backend/app/: api.py  main.py  systemd_client.py  ws.py
deploy/: install.sh  pi-services.service  sudoers.d-pi-services  wifi-radar.service
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx  index.css
frontend/src/components/: LogViewer.tsx  ServiceCard.tsx  ServiceList.tsx
frontend/src/lib/: api.ts  types.ts  ws.ts
